EP de subir imagen de perfil EP de perfil de usuario conexion a base servidor de base de datos

--- a/backend/ConferenceAPI/ConferenceAPI/appsettings.json
+++ b/backend/ConferenceAPI/ConferenceAPI/appsettings.json
@@ -6,18 +6,21 @@
     }
   },
   "AllowedHosts": "*",
+  //DB local
+  //"ConnectionStrings": {
+  //  "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
+  //},
 
   "ConnectionStrings": {
-    "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
+    "ConferenceBD": "Server=roundhouse.proxy.rlwy.net;Port=58206;Database=conferencesdb;User=root;Password=ByRlryzaDpYJTgqQPdWCMlvpEymvXONH;"
   },
-
 
 
 
   "Settings": {
 
-    "TiempoVidaToken": "15",
-  
+    "TiempoVidaToken": "15"
+
 
   },
 
