--- a/backend/ConferenceAPI/ConferenceAPI/appsettings.json
+++ b/backend/ConferenceAPI/ConferenceAPI/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   //DB local
-  //"ConnectionStrings": {
-  //  "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
-  //},
-
   "ConnectionStrings": {
-    "ConferenceBD": "Server=roundhouse.proxy.rlwy.net;Port=58206;Database=conferencesdb;User=root;Password=ByRlryzaDpYJTgqQPdWCMlvpEymvXONH;"
+    "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
   },
+
+  //"ConnectionStrings": {
+  //  "ConferenceBD": "Server=roundhouse.proxy.rlwy.net;Port=58206;Database=conferencesdb;User=root;Password=ByRlryzaDpYJTgqQPdWCMlvpEymvXONH;"
+  //},
 
 
 
