--- a/backend/ConferenceAPI/Ceonference.BL/Conference.BL.csproj
+++ b/backend/ConferenceAPI/Ceonference.BL/Conference.BL.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="jose-jwt" Version="5.0.0" />
     <PackageReference Include="MailKit" Version="4.6.0" />
+    <PackageReference Include="QuestPDF" Version="2022.12.1" />
   </ItemGroup>
 
   <ItemGroup>
