--- a/backend/ConferenceAPI/ConferenceAPI/ConferenceAPI.csproj
+++ b/backend/ConferenceAPI/ConferenceAPI/ConferenceAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="QuestPDF" Version="2022.12.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Volo.Abp.Data" Version="8.1.3" />
   </ItemGroup>
