--- a/backend/ConferenceAPI/ConferenceAPI/appsettings.json
+++ b/backend/ConferenceAPI/ConferenceAPI/appsettings.json
@@ -9,30 +9,24 @@
   //DB local
   "ConnectionStrings": {
     //"ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
-    "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Admin;"
+    "ConferenceBD": "Server=localhost;Database=conferencesdb;User=edgardo;Password=king5010@;"
   },
 
   //"ConnectionStrings": {
   //  "ConferenceBD": "Server=roundhouse.proxy.rlwy.net;Port=58206;Database=conferencesdb;User=root;Password=ByRlryzaDpYJTgqQPdWCMlvpEymvXONH;"
   //},
 
-
-
   "Settings": {
-
     "TiempoVidaToken": "15",
     "RutaArchivos": "C:\\Archivos"
-
   },
 
   "SettingsEmail": {
-
     //Claves para use de emaiol//
     "OutlookUser": "pruebasdicumentos2023@outlook.es",
     "OutlookPass": "MariaJose2023",
     "Servidor": "smtp.office365.com",
     "Puerto": "587"
-
   },
 
   "allowedOrigins": "*"
