Cambio en el EP de Registro de Conferencia
EP nuevo para listar usuarios registrados a temas de la conferencia

EP nuevo para asignar jurado al tema de la conferencia

--- a/backend/ConferenceAPI/ConferenceAPI/appsettings.json
+++ b/backend/ConferenceAPI/ConferenceAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   //DB local
   "ConnectionStrings": {
-    //"ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
-    "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Admin;"
+    "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Tesis2024#;"
+   // "ConferenceBD": "Server=localhost;Database=conferencesdb;User=root;Password=Admin;"
   },
 
   //"ConnectionStrings": {
