--- a/frontend/conference/package.json
+++ b/frontend/conference/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "next": "14.1.4",
     "prettier": "^3.3.3",
