Proceso de integracion de notificaiones via correo

--- a/backend/ConferenceAPI/ConferenceAPI/appsettings.json
+++ b/backend/ConferenceAPI/ConferenceAPI/appsettings.json
@@ -23,8 +23,8 @@
 
   "SettingsEmail": {
     //Claves para use de emaiol//
-    "OutlookUser": "pruebasdicumentos2023@outlook.es",
-    "OutlookPass": "MariaJose2023",
+    "OutlookUser": "ConeferenceTESIS@outlook.com",
+    "OutlookPass": "TESIS2024#",
     "Servidor": "smtp.office365.com",
     "Puerto": "587"
   },
