feature: El login redirige dependiendo del rol
Si el usuario viene de la landing page y elije la opcion gestionar
eventos, sera rigirigido al dashboard del organizador, caso contrario
sera dirigido al dashboard de usuario general

--- a/frontend/conference/.env.local
+++ b/frontend/conference/.env.local
@@ -3,3 +3,4 @@ API_URL=http://localhost:5110/api
 
 # URL que corre del lado del cliente
 NEXT_PUBLIC_API_URL=http://localhost:5110/api
+AUTH_SECRET="kDOHnPVA+YiFV75xTUrGWvfsm8Yv4ob66Jv73T4+z2A=" # Added by `npx auth`. Read more: https://cli.authjs.dev
