--- a/frontend/conference/package.json
+++ b/frontend/conference/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
+    "lucide-react": "^0.436.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.20",
     "prettier": "^3.3.3",
