feature: el dashboard del usuario general en Eventos muestra toda la informacion de la API

--- a/frontend/conference/package.json
+++ b/frontend/conference/package.json
@@ -37,11 +37,13 @@
     "lucide-react": "^0.436.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.20",
+    "pdfjs-dist": "^4.5.136",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-pdf": "^9.1.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
